# storyforge

./: .gitignore  LICENSE  README.md  bun.lockb  next.config.js  next.config.ts  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/database/: mod.rs
src/app/: layout.tsx  page.tsx
src/app/dashboard/: Card.tsx  page.tsx
src/app/landing/: page.tsx
src/app/project/: page.tsx
src/app/project/create/: page.tsx
src/app/project/story/: page.tsx
src/components/character/: Card.tsx
src/components/dashboard/: Card.tsx
src/utils/input/: styles.ts
src/utils/profile/: query.ts
src/utils/project/: genres.ts  models.ts
storyforge/: __main__.py  app.py
storyforge/middleware/: __init__.py  cors.py
storyforge/routes/: __init__.py  character.py  project.py  story.py
storyforge/schemas/: __init__.py  character.py  project.py  story.py
storyforge/services/: __init__.py  character.py  project.py  story.py
storyforge/services/characters/: character_description.py  character_image.py  name.py
storyforge/services/model/: __init__.py  image.py  text.py
storyforge/services/project/: cover_image.py  outline.py  story_suggest.py  synposis.py  title.py
storyforge/services/story/: chapter_suggestion.py  reconstruct.py
