[tool.poetry]
name = "storyforge"
version = "0.1.0"
description = "Transforming Writing with AI and Intel® Technology"
authors = ["grittypuffy <grittypuffy@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.115.6", extras = ["standard"] }
uvicorn = "^0.32.1"
optimum = { version = "^1.23.3", extras = ["openvino"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
