[tool.poetry]
name = "storyforge"
version = "0.1.0"
description = "Transforming Writing with AI and Intel® Technology"
authors = ["grittypuffy <grittypuffy@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.115.6", extras = ["standard"] }
uvicorn = "^0.32.1"
optimum = { version = "^1.23.3", extras = ["openvino"] }
huggingface-hub = "^0.26.5"
openvino-genai = "^2024.5.0.0"
diffusers = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
